tests/out/error/selector/cannot_select.in.bt
enum Color {
	red
	green
}

c := Color.red
_ := c.my_field
