tests/out/error/selector/cannot_select.out
tests/out/error/selector/cannot_select.in.bt:7:6 error: cannot select from Color
